--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
 html, body {
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
+  scroll-padding-top: 100px;
 }
 
 @layer base {
